compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  list.map([1, 2, 3], int.add(1, _))\n}"
---
----- BEFORE ACTION
pub fn main() {
  list.map([1, 2, 3], int.add(1, _))
           ▔▔▔▔↑                    
}


----- AFTER ACTION
pub fn main() {
  let value = [1, 2, 3]
  list.map(value, int.add(1, _))
}
