compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_from_arg_in_pipelined_call_of_function_to_capture.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/list\n\npub fn main() {\n  fn(total, item) { total + item }\n  |> list.fold(with: _, from: 0, over: [1, 2, 3])\n}\n"
---
----- BEFORE ACTION
import gleam/list

pub fn main() {
  fn(total, item) { total + item }
  |> list.fold(with: _, from: 0, over: [1, 2, 3])
          ↑                                      
}


----- AFTER ACTION
import gleam/list

pub fn main() {
  let value = list.fold(with: _, from: 0, over: [1, 2, 3])
  fn(total, item) { total + item }
  |> value
}
