compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  {\n    todo\n    wibble([1, 2, 3])\n    todo\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  {
    todo
    wibble([1, 2, 3])
               ▔▔▔↑  
    todo
  }
}


----- AFTER ACTION
pub fn main() {
  {
    todo
    let list = [1, 2, 3]
    wibble(list)
    todo
  }
}
