compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_case_branch.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n    case wibble {\n      _ -> [1, 2, 3]\n    }\n}"
---
----- BEFORE ACTION
pub fn main() {
    case wibble {
      _ -> [1, 2, 3]
           ↑        
    }
}


----- AFTER ACTION
pub fn main() {
    let list = [1, 2, 3]
    case wibble {
      _ -> list
    }
}
