compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_multiline_use.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n    use <- wibble(\n        [1, 2, 3]\n    )\n    todo\n}"
---
----- BEFORE ACTION
pub fn main() {
    use <- wibble(
        [1, 2, 3]
        ↑        
    )
    todo
}


----- AFTER ACTION
pub fn main() {
    let list = [1, 2, 3]
    use <- wibble(
        list
    )
    todo
}
