compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_inside_multiline_function_call.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  list.map(\n    [1, 2, 3],\n    int.add(1, _),\n  )\n}"
---
----- BEFORE ACTION
pub fn main() {
  list.map(
    [1, 2, 3],
    ↑         
    int.add(1, _),
  )
}


----- AFTER ACTION
pub fn main() {
  let list = [1, 2, 3]
  list.map(
    list,
    int.add(1, _),
  )
}
